expose/Jaeger.nodeport.yaml
apiVersion: v1
kind: Service
metadata:
   name: jaeger-nodeport
   namespace: istio-system
spec:
  type: NodePort
  ports:
  - port: 16686
    targetPort: 16686
    nodePort: 30102
  selector:
    app: jaeger
