expose/external.ip.service.yaml
apiVersion: v1
kind: Service
metadata:
   name: external-service-ip
spec:
  ports:
  - port: 80
