expose/external.ip.yaml
apiVersion: v1
kind: Endpoints
metadata:
   name: external-service-ip
subsets:
   - addresses:
     - ip: 120.79.227.119
     ports:
      - port: 80
