expose/external.rs.yaml
apiVersion: v1
kind: Service
metadata:
   name: external-service
spec:
  type: ExternalName
  externalName: moria.kwaisu.com
  ports:
  - port: 80
