expose/istio-ingressgateway-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
   name: istio-ingressgateway-nodeport
   namespace: istio-system
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30101
  selector:
    app: grafana
