expose/kiali.nodeport.yaml
apiVersion: v1
kind: Service
metadata:
   name: kiali-nodeport
   namespace: istio-system
spec:
  type: NodePort
  ports:
  - port: 20001
    targetPort: 20001
    nodePort: 30103
  selector:
    app: kiali
