expose/kubia-2.rs.service.yaml
apiVersion: v1
kind: Service
metadata:
   name: kubia4
spec:
   ports:
    - name: http 
      port: 8081
      targetPort: http
   selector:
     app: kubia2
