expose/kubia.rs.service.yaml
apiVersion: v1
kind: Service
metadata:
   name: kubia
spec:
   ports:
    - name: http 
      port: 80
      targetPort: http
   selector:
     app: kubia
