expose/nginx.rs.service.yaml
apiVersion: v1
kind: Service
metadata:
   name: rc-nginx
spec:
   ports:
    - name: http 
      port: 8081
      targetPort: http
   selector:
     app: rc-nginx
