expose/weave.nodeport.yaml
apiVersion: v1
kind: Service
metadata:
   name: weave-nodeport
   namespace: weave
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30105
  selector:
    app: weave-scope
    name: weave-scope-app
    weave-cloud-component: scope
    weave-scope-component: app
