expose/kubia.ingress.service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: kubia-ingress
   namespace: ingress-nginx
spec:
  rules:
    - http:
       paths:
       - path: /
         backend:
            serviceName: kubia
            servicePort: 80
